--- a/Config.json
+++ b/Config.json
@@ -1,8 +1,17 @@
 [
   {
-    "id":"SZUFR0"
+    "id":"SZUFR0", "safe":"10"
   },
   {
-    "id":"cExxov"
+    "id":"cExxov", "safe":"30"
+  },
+  {
+    "id":"fsowhcp", "safe":"50"
+  },
+  {
+    "id":"sbnwici", "safe":"70"
+  },
+  {
+    "id":"cyaoq2", "safe":"90"
   }
 ]
