--- a/Config.json
+++ b/Config.json
@@ -9,7 +9,7 @@
     "id":"fsowhcp", "safe":"50", "status":"true"
   },
   {
-    "id":"sbnwici", "safe":"70", "status":"true"
+    "id":"sbnwici", "safe":"70", "status":"false"
   },
   {
     "id":"cyaoq2", "safe":"90", "status":"true"
