--- a/Config.json
+++ b/Config.json
@@ -1,17 +1,11 @@
 [
-  {
-    "id":"SZUFR0", "safe":"10", "status":"false", "time":"22:00 26-01-2024", "game":"ffn-ffm"
-  },
-  {
-    "id":"cExxov", "safe":"30", "status":"true", "time":"18:30 24-12-2023", "game":"ffa-ff"
-  },
-  {
-    "id":"fsowhcp", "safe":"50", "status":"true", "time":"06:00 01-01-2023", "game":"fft"
-  },
-  {
-    "id":"sbnwici", "safe":"70", "status":"false", "time":"23:59 31-12-2022", "game":"ffn"
-  },
-  {
-    "id":"cyaoq2", "safe":"90", "status":"true", "time":"09:00 10-08-2022", "game":"ffn-ffm"
+{
+  "id": "SZUFR0",
+  "status": "false",
+  "safe": "10",
+  "time": "22:00 26-01-2024",
+  "game": "ffn-ffm",
+  "title":"Menu Regedit Headshot OB43",
+  "sub":"V1.104.5 • Menu • Regedit • "
   }
 ]
