--- a/Config.json
+++ b/Config.json
@@ -1,7 +1,7 @@
 [
   {
-    "id": "SZUFR0",
-    "status": "false",
+    "id": "cExxov",
+    "status": "true",
     "safe": "90",
     "time": "22:00 26-01-2024",
     "game": "ffn-ffm",
