--- a/Config.json
+++ b/Config.json
@@ -7,5 +7,6 @@
     "game": "ffn-ffm",
     "title":"Menu Regedit Headshot OB43",
     "sub":"V1.104.5 • Menu • Regedit • "
+    "listImage":"[{\"image\":\"https://youtu.be/aTFeDAGHG5k\"},{\"image\":\"https://hoanghamobile.com/tin-tuc/wp-content/uploads/2023/08/hinh-nen-dien-thoai-anime-2.jpg\"}]"
   }
 ]
