--- a/Config.json
+++ b/Config.json
@@ -8,5 +8,15 @@
     "title":"Menu Regedit Headshot OB43",
     "sub":"V1.104.5 • Menu • Regedit • ",
     "listImage":"[{\"image\":\"https://youtu.be/aTFeDAGHG5k\"},{\"image\":\"https://hoanghamobile.com/tin-tuc/wp-content/uploads/2023/08/hinh-nen-dien-thoai-anime-2.jpg\"}]"
+  },
+  {
+    "id": "dhi3b8",
+    "status": "true",
+    "safe": "90",
+    "time": "22:00 29-01-2024",
+    "game": "ffn-ffa-ffm",
+    "title":"File Regedit Headshot OB43",
+    "sub":"V1.104.5 • Menu • Regedit • ",
+    "listImage":"[{\"image\":\"https://youtu.be/wrUXoP8Lmeg\"},{\"image\":\"https://didongviet.vn/dchannel/wp-content/uploads/2023/08/hinh-nen-3d-hinh-nen-iphone-dep-3d-didongviet-64@2x-576x1024.jpg\"},{\"image\":\"https://phuongtanphuoc.gov.vn/wp/vietnam/anhdepvietnam%20(24).jpg\"},{\"image\":\"https://didongviet.vn/dchannel/wp-content/uploads/2023/08/hinh-nen-3d-hinh-nen-iphone-dep-3d-didongviet@2x-576x1024.jpg\"}]"
   }
 ]
