--- a/Config.json
+++ b/Config.json
@@ -7,6 +7,7 @@
     "game": "ffn-ffm",
     "title":"Menu Regedit Headshot OB43",
     "sub":"V1.104.5 • Menu • Regedit • ",
+    "icon":"https://www.vietnamworks.com/hrinsider/wp-content/uploads/2023/12/anh-den-ngau.jpeg",
     "listImage":"[{\"image\":\"https://youtu.be/aTFeDAGHG5k\"},{\"image\":\"https://hoanghamobile.com/tin-tuc/wp-content/uploads/2023/08/hinh-nen-dien-thoai-anime-2.jpg\"}]"
   },
   {
@@ -17,6 +18,7 @@
     "game": "ffn-ffa-ffm",
     "title":"File Regedit Headshot OB43",
     "sub":"V1.104.5 • Menu • Regedit • ",
+    "icon":"https://thcs-thptlongphu.edu.vn/wp-content/uploads/2023/03/anh-gai-dep-facebook-lam-anh-dai-dien2b252822529.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/wrUXoP8Lmeg\"},{\"image\":\"https://didongviet.vn/dchannel/wp-content/uploads/2023/08/hinh-nen-3d-hinh-nen-iphone-dep-3d-didongviet-64@2x-576x1024.jpg\"},{\"image\":\"https://phuongtanphuoc.gov.vn/wp/vietnam/anhdepvietnam%20(24).jpg\"},{\"image\":\"https://didongviet.vn/dchannel/wp-content/uploads/2023/08/hinh-nen-3d-hinh-nen-iphone-dep-3d-didongviet@2x-576x1024.jpg\"}]"
   }
 ]
