--- a/Config.json
+++ b/Config.json
@@ -4,6 +4,8 @@
     "status": "true",
     "safe": "90",
     "time": "22:00 26-01-2024",
+    "menu":"true",
+    "android":"6-13",
     "game": "ffn-ffm",
     "title":"Menu Regedit Headshot OB43",
     "sub":"V1.104.5 • Menu • Regedit • ",
@@ -15,6 +17,8 @@
     "status": "true",
     "safe": "90",
     "time": "22:00 29-01-2024",
+    "menu":"false",
+    "android":"5-14",
     "game": "ffn-ffa-ffm",
     "title":"File Regedit Headshot OB43",
     "sub":"V1.104.5 • Menu • Regedit • ",
