--- a/Config.json
+++ b/Config.json
@@ -6,7 +6,8 @@
     "time": "22:00 26-01-2024",
     "menu":"true",
     "android":"6-13",
-    "game": "ffn-ffm",
+    "game":"ffn-ffm",
+    "path":"files/-files/il2cpp/-files/Mreplays/",
     "title":"Menu Regedit Headshot OB43",
     "sub":"V1.104.5 • Menu • Regedit • ",
     "icon":"https://www.vietnamworks.com/hrinsider/wp-content/uploads/2023/12/anh-den-ngau.jpeg",
@@ -20,6 +21,7 @@
     "menu":"false",
     "android":"5-14",
     "game": "ffn-ffa-ffm",
+    "path":"files/-cache/-cache/UnityShaderCache/",
     "title":"File Regedit Headshot OB43",
     "sub":"V1.104.5 • Menu • Regedit • ",
     "icon":"https://thcs-thptlongphu.edu.vn/wp-content/uploads/2023/03/anh-gai-dep-facebook-lam-anh-dai-dien2b252822529.jpg",
