--- a/Config.json
+++ b/Config.json
@@ -1,20 +1,20 @@
 [
   {
-    "id": "cExxov",
+    "id": "0001",
     "status": "true",
-    "safe": "90",
-    "time": "22:00 26-01-2024",
+    "safe": "95",
+    "time": "00:35 09-02-2024",
     "menu":"true",
-    "android":"6-13",
+    "android":"5-13",
     "game":"ffn-ffm",
-    "path":"files-files/il2cpp-files/record",
-    "title":"Menu Regedit Headshot OB43",
-    "sub":"V1.104.5 • Menu • Regedit • ",
+    "path":"cache/UnityShaderCache",
+    "title":"Menu Panel phiên bản Monster siêu Vip",
+    "sub":"V1.104.5 • Menu • Panel • ",
     "icon":"https://www.vietnamworks.com/hrinsider/wp-content/uploads/2023/12/anh-den-ngau.jpeg",
     "listImage":"[{\"image\":\"https://youtu.be/aTFeDAGHG5k\"},{\"image\":\"https://hoanghamobile.com/tin-tuc/wp-content/uploads/2023/08/hinh-nen-dien-thoai-anime-2.jpg\"}]"
   },
   {
-    "id": "dhi3b8",
+    "id": "0002",
     "status": "true",
     "safe": "90",
     "time": "22:00 29-01-2024",
