--- a/Config.json
+++ b/Config.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "0001",
-    "status": "false",
+    "status": "true",
     "safe": "95",
     "time": "00:35 09-02-2024",
     "menu":"true",
