--- a/Config.json
+++ b/Config.json
@@ -7,7 +7,7 @@
     "menu":"true",
     "android":"5-13",
     "game":"ffn-ffa-ffm",
-    "path":"cache/UnityShaderCache",
+    "path":"",
     "title":"Menu Panel phiên bản Monster",
     "sub":"V1.103.7 • Menu • Panel • ",
     "icon":"https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
