--- a/Config.json
+++ b/Config.json
@@ -11,6 +11,6 @@
     "title":"Menu Panel phiên bản Monster",
     "sub":"V1.103.7 • Menu • Panel • ",
     "icon":"https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
-    "listImage":"[{\"image\":\"https://youtu.be/aTFeDAGHG5k\"},{\"image\":\"https://hoanghamobile.com/tin-tuc/wp-content/uploads/2023/08/hinh-nen-dien-thoai-anime-2.jpg\"}]"
+    "listImage":"[{\"image\":\"https://youtu.be/9F2MXi0-19s\"},{\"image\":\"https://hoanghamobile.com/tin-tuc/wp-content/uploads/2023/08/hinh-nen-dien-thoai-anime-2.jpg\"}]"
   }
 ]
