--- a/Config.json
+++ b/Config.json
@@ -5,12 +5,12 @@
     "safe": "95",
     "time": "00:35 09-02-2024",
     "menu":"true",
-    "android":"5-13",
+    "android":"5-14",
     "game":"ffn-ffa-ffm",
     "path":"",
     "title":"Menu Panel phiên bản Monster",
     "sub":"V1.103.7 • Menu • Panel • ",
     "icon":"https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
-    "listImage":"[{\"image\":\"https://youtu.be/9F2MXi0-19s\"},{\"image\":\"https://hoanghamobile.com/tin-tuc/wp-content/uploads/2023/08/hinh-nen-dien-thoai-anime-2.jpg\"}]"
+    "listImage":"[{\"image\":\"https://drive.google.com/uc?id=1sNUl7KJgE6tZN-txZtVDm0ddvNpJzhfN\"},{\"image\":\"https://drive.google.com/uc?id=1Dmc4h92FVue7XA-cGg2G4TlJzXABqT80\"}]"
   }
 ]
