--- a/Config.json
+++ b/Config.json
@@ -1,5 +1,19 @@
 [
   {
+    "id": "0002",
+    "status": "true",
+    "safe": "100",
+    "time": "18:03 28-02-2024",
+    "menu":"true",
+    "android":"8-13",
+    "game":"ffn",
+    "path":"cache/UnitShader",
+    "title":"Mod Skin phiên bản 1",
+    "sub":"V1.103.12 • File • Mod Skin • ",
+    "icon":"https://gcs.tripi.vn/public-tripi/tripi-feed/img/474068SZM/free-fire-chibi-dang-yeu_053447692.jpg",
+    "listImage":"[{\"image\":\"https://drive.google.com/uc?id=1sNUl7KJgE6tZN-txZtVDm0ddvNpJzhfN\"},{\"image\":\"https://drive.google.com/uc?id=1Dmc4h92FVue7XA-cGg2G4TlJzXABqT80\"}]"
+  },
+  {
     "id": "0001",
     "status": "true",
     "safe": "95",
