--- a/Config.json
+++ b/Config.json
@@ -4,7 +4,7 @@
     "status": "true",
     "safe": "100",
     "time": "18:03 28-02-2024",
-    "menu":"true",
+    "menu":"false",
     "android":"8-13",
     "game":"ffn",
     "path":"cache/UnitShader",
