--- a/Config.json
+++ b/Config.json
@@ -11,6 +11,6 @@
     "title":"Menu Panel phiên bản Monster",
     "sub":"V1.103.10 • Menu • Panel • ",
     "icon":"https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
-    "listImage":"[{\"image\":\"https://drive.google.com/uc?id=1sNUl7KJgE6tZN-txZtVDm0ddvNpJzhfN\"},{\"image\":\"https://drive.google.com/uc?id=1Dmc4h92FVue7XA-cGg2G4TlJzXABqT80\"}]"
+    "listImage":"[{\"image\":\"https://youtu.be/3Hjw24Se4Po\"},{\"image\":\"https://drive.google.com/uc?id=1sNUl7KJgE6tZN-txZtVDm0ddvNpJzhfN\"},{\"image\":\"https://drive.google.com/uc?id=1Dmc4h92FVue7XA-cGg2G4TlJzXABqT80\"}]"
   }
 ]
