--- a/Config.json
+++ b/Config.json
@@ -1,5 +1,19 @@
 [
   {
+    "id": "0002",
+    "status": "true",
+    "safe": "100",
+    "time": "22:18 31-03-2024",
+    "menu":"true",
+    "android":"4-14",
+    "game":"ffn-ffa-ffm-fft",
+    "path":"",
+    "title":"Config nút điều khiển hệ thống phiên bản Tiger",
+    "sub":"V1.103.13 • Button • Config • ",
+    "icon":"https://i.pinimg.com/236x/2e/e4/5e/2ee45e9fb26565954ca395f9e390a0e1.jpg",
+    "listImage":"[]"
+  },
+  {
     "id": "0001",
     "status": "true",
     "safe": "95",
