--- a/Config.json
+++ b/Config.json
@@ -15,7 +15,7 @@
   },
   {
     "id": "0001",
-    "status": "true",
+    "status": "false",
     "safe": "95",
     "time": "00:35 09-02-2024",
     "menu":"true",
