--- a/Config.json
+++ b/Config.json
@@ -15,15 +15,15 @@
   },
   {
     "id": "0001",
-    "status": "false",
+    "status": "true",
     "safe": "95",
-    "time": "00:35 09-02-2024",
+    "time": "23:20 20-04-2024",
     "menu":"true",
     "android":"5-14",
     "game":"ffn-ffa-ffm",
     "path":"",
     "title":"Menu Panel phiên bản Monster",
-    "sub":"V1.103.13 • Menu • Panel • ",
+    "sub":"V1.104.4 • Menu • Panel • ",
     "icon":"https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/3Hjw24Se4Po\"},{\"image\":\"https://drive.google.com/uc?id=1sNUl7KJgE6tZN-txZtVDm0ddvNpJzhfN\"},{\"image\":\"https://drive.google.com/uc?id=1Dmc4h92FVue7XA-cGg2G4TlJzXABqT80\"}]"
   }
