--- a/Config.json
+++ b/Config.json
@@ -11,7 +11,7 @@
     "title":"Config nút điều khiển hệ thống phiên bản Tiger",
     "sub":"V1.103.13 • Button • Config • ",
     "icon":"https://i.pinimg.com/236x/2e/e4/5e/2ee45e9fb26565954ca395f9e390a0e1.jpg",
-    "listImage":"[]"
+    "listImage":"[{\"image\":\"https://youtu.be/-arcAJL1Xg0\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
   },
   {
     "id": "0001",
