--- a/Config.json
+++ b/Config.json
@@ -1,15 +1,29 @@
 [
+    {
+    "id": "0003",
+    "status": "true",
+    "safe": "100",
+    "time": "15:24 22-05-2024",
+    "menu":"true",
+    "android":"5-13",
+    "game":"ffa",
+    "path":"",
+    "title":"Menu OBB đạn ma thuật phiên bản Shark",
+    "sub":"V1.104.9 • Menu • OBB • ",
+    "icon":"https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
+    "listImage":"[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
+  },
   {
     "id": "0002",
     "status": "true",
     "safe": "100",
     "time": "22:18 31-03-2024",
-    "menu":"true",
+    "menu":"false",
     "android":"4-14",
     "game":"ffn-ffa-ffm-fft",
     "path":"",
     "title":"Config nút điều khiển hệ thống phiên bản Tiger",
-    "sub":"V1.103.13 • Button • Config • ",
+    "sub":"V1.104.X • Button • Config • ",
     "icon":"https://i.pinimg.com/236x/2e/e4/5e/2ee45e9fb26565954ca395f9e390a0e1.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/-arcAJL1Xg0\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
   },
@@ -23,7 +37,7 @@
     "game":"ffn-ffa-ffm",
     "path":"",
     "title":"Menu Panel phiên bản Monster",
-    "sub":"V1.104.4 • Menu • Panel • ",
+    "sub":"V1.104.9 • Menu • Panel • ",
     "icon":"https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/3Hjw24Se4Po\"},{\"image\":\"https://drive.google.com/uc?id=1sNUl7KJgE6tZN-txZtVDm0ddvNpJzhfN\"},{\"image\":\"https://drive.google.com/uc?id=1Dmc4h92FVue7XA-cGg2G4TlJzXABqT80\"}]"
   }
