--- a/ConfigTiger.json
+++ b/ConfigTiger.json
@@ -1,10 +1,10 @@
-{
-  "0003": 
-  {
-    "status":true,
-    "safe":60,
+[
+    {
+    "id": "0003",
+    "status": "true",
+    "safe": "60",
     "time": "15:24 22-05-2024",
-    "menu":true,
+    "menu":"true",
     "android":"5-13",
     "game":"ffa",
     "path":"",
@@ -13,12 +13,12 @@
     "icon":"https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
   },
-  "0002":
-  {   
-    "status":true,
-    "safe":100,
-    "time":"22:18 31-03-2024",
-    "menu":false,
+  {
+    "id": "0002",
+    "status": "true",
+    "safe": "100",
+    "time": "22:18 31-03-2024",
+    "menu":"false",
     "android":"4-14",
     "game":"ffn-ffa-ffm-fft",
     "path":"",
@@ -27,12 +27,12 @@
     "icon":"https://i.pinimg.com/236x/2e/e4/5e/2ee45e9fb26565954ca395f9e390a0e1.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/-arcAJL1Xg0\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
   },
-  "0001":
   {
-    "status":true,
-    "safe":95,
-    "time":"23:20 20-04-2024",
-    "menu":true,
+    "id": "0001",
+    "status": "true",
+    "safe": "95",
+    "time": "23:20 20-04-2024",
+    "menu":"true",
     "android":"5-14",
     "game":"ffn-ffa-ffm",
     "path":"",
@@ -41,4 +41,4 @@
     "icon":"https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/3Hjw24Se4Po\"},{\"image\":\"https://drive.google.com/uc?id=1sNUl7KJgE6tZN-txZtVDm0ddvNpJzhfN\"},{\"image\":\"https://drive.google.com/uc?id=1Dmc4h92FVue7XA-cGg2G4TlJzXABqT80\"}]"
   }
-}
+]
