--- a/ConfigTiger.json
+++ b/ConfigTiger.json
@@ -18,7 +18,7 @@
     "status": "true",
     "safe": "100",
     "time": "22:18 31-03-2024",
-    "menu":"false",
+    "menu":"true",
     "android":"4-14",
     "game":"ffn-ffa-ffm-fft",
     "path":"",
