--- a/ConfigTiger.json
+++ b/ConfigTiger.json
@@ -7,7 +7,7 @@
     "menu":"true",
     "android":"5-13",
     "game":"ffa",
-    "path":"Android/obb/%s-Android/data/%s/files",
+    "path":"Android/obb/%s",
     "title":"Menu OBB đạn ma thuật phiên bản Shark",
     "sub":"V1.104.9 • Menu • OBB • ",
     "icon":"https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
@@ -33,9 +33,9 @@
     "safe": "95",
     "time": "23:20 20-04-2024",
     "menu":"true",
-    "android":"5-14",
+    "android":"5-13",
     "game":"ffn-ffa-ffm",
-    "path":"",
+    "path":"Android/data/%s/cache/UnityShaderCache",
     "title":"Menu Panel phiên bản Monster",
     "sub":"V1.104.9 • Menu • Panel • ",
     "icon":"https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
