--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,9 +1,9 @@
 [
   {
     "maintenance":"false",
-    "version":"1.0.3",
+    "version":"1.1.1",
     "download":"https://www.mediafire.com/file/42g4n2cxs4m8mww/Demoder_1.0.3_beta.apk/file",
-    "detail":"1. Bản vá lỗi hệ thống\n2.Thêm tính năng tải xuống File bên ngoài Web"
+    "detail":"1. Thêm nhiều Config mới đa dạng tính năng\n2. Thay đổi giao diện khám phá hiện đại\n3. Thêm tính năng tải lên Mod\n4. Khắc phục lỗi tải xuống không thành công trên tất cả dòng máy\n5. Thêm công cụ Trạm phát nhạc Browser\n6. Thêm tính năng Quản lí bản Mod của bạn\n7. Cải thiện hiệu suất ứng dụng\n8. Vá lỗi nhỏ trên phiên bản trước"
   },
   {
     "admin_mail":"dihaver.studio@gmail.com",
