--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -20,7 +20,7 @@
     "url_private_policy":"https://help.demoder.pro.vn/p/privacy-policy.html",
     "url_pro_terms":"https://help.demoder.pro.vn/p/pro-terms.html",
     "url_android_13_permission":"https://help.demoder.pro.vn/2024/03/huong-dan-cap-quyen-tren-android-13.html",
-    "url_path_not_found":"https://help.demoder.pro.vn/2024/03/huong-dan-fix-loi-khong-tim-thay-uong.html",
+    "url_error_exists_path":"https://help.demoder.pro.vn/2024/03/huong-dan-fix-loi-khong-tim-thay-uong.html",
     "url_use_browser_music":"https://help.demoder.pro.vn/2024/05/huong-dan-su-dung-tinh-nang-tram-phat.html",
     "url_upload_file_sever":""
   }
