--- a/ConfigTiger.json
+++ b/ConfigTiger.json
@@ -1,28 +1,14 @@
 [
     {
-    "id": "0004",
-    "status": "true",
-    "safe": "60",
-    "time": "22:19 23-05-2024",
-    "menu":"true",
-    "android":"5-13",
-    "game":"ffa",
-    "path":"Android/obb/%s",
-    "title":"Menu OBB Auto Headshot ver Dino",
-    "sub":"V1.104.10 • Menu • OBB • ",
-    "icon":"https://i.pinimg.com/564x/50/8c/ac/508cacda8f79492085c04da8775226e8.jpg",
-    "listImage":"[{\"image\":\"https://youtu.be/s6Ff23-0wb8\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
-    },
-    {
     "id": "0003",
     "status": "true",
     "safe": "60",
-    "time": "15:24 22-05-2024",
+    "time": "15:24 25-05-2024",
     "menu":"true",
     "android":"5-13",
     "game":"ffa",
     "path":"Android/obb/%s",
-    "title":"Menu OBB Đạn Ma Thuật ver Shark",
+    "title":"Menu OBB Regedit Headshot ver Shark",
     "sub":"V1.104.10 • Menu • OBB • ",
     "icon":"https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
