--- a/ConfigTiger.json
+++ b/ConfigTiger.json
@@ -25,7 +25,7 @@
     "title":"Config Nút Điều Khiển Hệ Thống ver Tiger",
     "sub":"V1.104.X • Button • Config • ",
     "icon":"https://i.pinimg.com/236x/2e/e4/5e/2ee45e9fb26565954ca395f9e390a0e1.jpg",
-    "listImage":"[{\"image\":\"https://youtu.be/-arcAJL1Xg0\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
+    "listImage":"[{\"image\":\"https://i.ibb.co/YQTnw7x/IMG-20240527-114533-min.webp\"},{\"image\":\"https://i.ibb.co/6cKVWVY/IMG-20240527-114546-min.webp\"}]"
   },
   {
     "id": "0001",
