--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -14,11 +14,11 @@
   },
   {
     "mail": "dihaver.studio@gmail.com",
-    "mock_config_comment": "https://65118baf829fa0248e40500d.mockapi.io/api/data/mod/v1/",
-    "mock_discover_upload": "https://66308a0dc92f351c03da2a76.mockapi.io/api/v1/Upload",
-    "mock_discover_view": "https://6645dd3db8925626f893844c.mockapi.io/api/v1/View",
-    "mock_discover_detail": "https://6645de40b8925626f8938800.mockapi.io/api/v1/Detail",
-    "mock_discover_comment": "https://664619d751e227f23aadc862.mockapi.io/api/v1/Comment",
+    "mock_config_comment": "https://6657762b5c3617052644e9fa.mockapi.io/comment",
+    "mock_discover_upload": "https://665779385c3617052644f4a8.mockapi.io/upload",
+    "mock_discover_view": "https://6657791a5c3617052644f482.mockapi.io/view",
+    "mock_discover_detail": "https://665779265c3617052644f499.mockapi.io/detail",
+    "mock_discover_comment": "https://665779315c3617052644f49f.mockapi.io/comment",
     "script_upload": "https://script.google.com/macros/s/AKfycbxk0L7ylKN3-4v9MrUBE-dQ6AuCJ3vrI_M2gWLQd5q2ko4rpKfrs-80PYVpkfHnxMo_/exec",
     "zalo_contacts": "https://t.me/andemoder",
     "terms_condition": "https://help.demoder.pro.vn/p/terms-conditions.html",
