--- a/Config.json
+++ b/Config.json
@@ -4,10 +4,13 @@
     "status": "true",
     "safe": "80",
     "time": "15:24 25-05-2024",
+    "download":"true",
     "menu":"true",
     "android":"6-13",
-    "game":"ffa",
-    "source":"shark/custom",
+    "game":"ff",
+    "source":"shark/main.2019117297.com.dts.freefireth.obb",
+    "size":"3797329999",
+    "url":"https://www.mediafire.com/file/",
     "path":"Android/obb/%s",
     "title":"Menu OBB Regedit Headshot ver Shark",
     "sub":"V1.104.10 • Menu • OBB • ",
@@ -19,6 +22,7 @@
     "status": "true",
     "safe": "100",
     "time": "22:18 20-05-2024",
+    "download":"false",
     "menu":"true",
     "android":"4-14",
     "game":"ffn-ffa-ffm-fft",
@@ -33,6 +37,7 @@
     "status": "true",
     "safe": "95",
     "time": "23:20 20-04-2024",
+    "download":"false",
     "menu":"true",
     "android":"6-13",
     "game":"ffn-ffa-ffm",
