--- a/Config.json
+++ b/Config.json
@@ -7,7 +7,7 @@
     "download":"true",
     "menu":"true",
     "android":"6-13",
-    "game":"ff",
+    "game":"ffn",
     "source":"shark/main.2019117297.com.dts.freefireth.obb",
     "size":"3797329999",
     "url":"https://www.mediafire.com/file/",
