--- a/Config.json
+++ b/Config.json
@@ -8,7 +8,7 @@
     "menu":"true",
     "android":"6-13",
     "game":"ffn",
-    "source":"shark/main.2019117297.com.dts.freefireth.obb",
+    "source":"/shark/main.2019117297.com.dts.freefireth.obb",
     "size":"3797329999",
     "url":"https://www.mediafire.com/file/",
     "path":"Android/obb/%s",
