--- a/Config.json
+++ b/Config.json
@@ -8,10 +8,12 @@
     "menu":"true",
     "android":"6-13",
     "game":"ffn",
-    "source":"/shark/main.2019117297.com.dts.freefireth.obb",
-    "size":"3797329999",
-    "url":"https://www.mediafire.com/file/",
+    
+    "source":"/shark/main.2019117295.com.dts.freefireth.obb",
+    "size":"336005453",
+    "url":"https://www.mediafire.com/file/o93a1bn3ski6yg2/main.2019117295.com.dts.freefireth.obb/file",
     "path":"Android/obb/%s",
+    
     "title":"Menu OBB Regedit Headshot ver Shark",
     "sub":"V1.104.10 • Menu • OBB • ",
     "icon":"https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
