--- a/Config.json
+++ b/Config.json
@@ -1,4 +1,24 @@
 [
+{
+    "id": "0004",
+    "status": "true",
+    "safe": "100",
+    "time": "12:21 04-06-2024",
+    "download":"true",
+    "menu":"false",
+    "android":"6-13",
+    "game":"ffn",
+    
+    "source":"/skin/v1/test.zip",
+    "size":"639976",
+    "url":"https://www.mediafire.com/file/iiwu6f0ywstmb6v/test.zip/file",
+    "path":"Android/data/%s/files-Android/data/%s/cache",
+    
+    "title":"Test Mod Skin ver One",
+    "sub":"V1.104.X • Mod Skin • Data • ",
+    "icon":"https://cellphones.com.vn/sforum/wp-content/uploads/2023/11/hinh-nen-kuromi-cute-2.jpg",
+    "listImage":"[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
+  },
     {
     "id": "0003",
     "status": "true",
