--- a/Config.json
+++ b/Config.json
@@ -29,13 +29,13 @@
     "android":"6-13",
     "game":"ffn",
     
-    "source":"/shark/main.2019117295.com.dts.freefireth.obb",
+    "source":"/shark/Regedit-Wall-Yellow-11001110.obb",
     "size":"336005453",
-    "url":"https://www.mediafire.com/file/o93a1bn3ski6yg2/main.2019117295.com.dts.freefireth.obb/file",
+    "url":"https://www.mediafire.com/file/t51itxozjczbun9/Regedit-Wall-Yellow-11001110.obb/file",
     "path":"Android/obb/%s",
     
-    "title":"Menu OBB Regedit Headshot ver Shark",
-    "sub":"V1.104.10 • Menu • OBB • ",
+    "title":"Menu OBB Regedit 2.0 Headshot ver Shark",
+    "sub":"V1.104.X • Menu • OBB • ",
     "icon":"https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
   },
