--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,6 +1,6 @@
 [
   {
-    "maintenance": false,
+    "maintenance": true,
     "versionCode": 5,
     "versionName":"1.1.2 beta",
     "download": "https://www.mediafire.com/file/3a7sc2n1n1069t7/Demoder_1.1.2_beta.apk/file",
