--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,13 +1,13 @@
 [
   {
     "maintenance": true,
-    "versionCode": 5,
-    "versionName":"1.1.2 beta",
+    "versionCode": 6,
+    "versionName":"1.2.1 beta",
     "download": "https://www.mediafire.com/file/3a7sc2n1n1069t7/Demoder_1.1.2_beta.apk/file",
-    "detail": "1. Thêm nhiều Config mới đa dạng tính năng\n2. Thay đổi giao diện khám phá hiện đại\n3. Thêm tính năng tải lên Mod\n4. Khắc phục lỗi tải xuống không thành công trên tất cả dòng máy\n5. Thêm công cụ Trạm phát nhạc Browser\n6. Thêm tính năng Quản lí bản Mod của bạn\n7. Cải thiện hiệu suất ứng dụng\n8. Vá lỗi nhỏ trên phiên bản trước"
+    "detail": "1. Thêm Config mới đa dạng tính năng\n2. Cải thiện hiệu suất ứng dụng\n3. Thêm tính năng kết thúc Config trên thông báo\n4. Khắc phục lỗi mở tệp bị hỏng\n5. Vá các lỗi nhỏ trên các phiên bản trước"
   },
   {
-    "home": true,
+    "home": false,
     "discover": false,
     "tools": false,
     "profile": false
