--- a/Config.json
+++ b/Config.json
@@ -37,7 +37,7 @@
     "title":"Menu OBB Regedit 2.0 Headshot ver Shark",
     "sub":"V1.104.X • Menu • OBB • ",
     "icon":"https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
-    "listImage":"[{\"image\":\"https://youtu.be/obPAbCX-6Fg\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
+    "listImage":"[{\"image\":\"https://youtu.be/obPAbCX-6Fg\"},{\"image\":\"https://i.ibb.co/frQRmBs/IMG-20240608-192835.webp\"},{\"image\":\"https://i.ibb.co/f2W6yQZ/IMG-20240608-192234-min.webp\"}]"
   },
   {
     "id": "0002",
