--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,10 +1,10 @@
 [
   {
     "maintenance": false,
-    "versionCode": 8,
-    "versionName":"1.2.3 beta",
-    "download": "https://www.mediafire.com/file/zrf3qm0s2mn68jt/Demoder_1.2.3_beta.apk/file",
-    "detail": "1. Bản vá lỗi tính năng\n2. Sửa lỗi không mở được menu trên một số dòng máy"
+    "versionCode": 9,
+    "versionName":"1.2.4 beta",
+    "download": "https://www.mediafire.com/file/f4qbzlaijzuet46/Demoder_1.2.4_beta.apk/file",
+    "detail": "1. Bản vá một số lỗi tính năng\n2. Thêm ngôn ngữ mới"
   },
   {
     "home": false,
