--- a/Config.json
+++ b/Config.json
@@ -2,21 +2,21 @@
 {
     "id": "0004",
     "status": "true",
-    "safe": "100",
-    "time": "12:21 04-06-2024",
+    "safe": "60",
+    "time": "16:13 09-06-2024",
     "download":"true",
-    "menu":"false",
+    "menu":"true",
     "android":"6-14",
-    "game":"ffn",
+    "game":"ffa",
     
-    "source":"/skinV1/test.zip",
-    "size":"639976",
-    "url":"https://www.mediafire.com/file/iiwu6f0ywstmb6v/test.zip/file",
-    "path":"Android/data/%s/files-Android/data/%s/cache",
+    "source":"/phoenix/AutoHeadshot-Wall-Blue-11101010.obb",
+    "size":"30151",
+    "url":"https://www.mediafire.com/file/ku68kg7wb8wii83/AutoHeadshot-Wall-Blue-11101010.obb/file",
+    "path":"Android/obb/%s",
     
-    "title":"Test Mod Skin ver One",
-    "sub":"V1.104.X • Mod Skin • Data • ",
-    "icon":"https://cellphones.com.vn/sforum/wp-content/uploads/2023/11/hinh-nen-kuromi-cute-2.jpg",
+    "title":"Menu OBB Auto Headshot 100% ver Phoenix",
+    "sub":"V1.104.X • Menu • OBB • ",
+    "icon":"https://i.pinimg.com/564x/e2/66/5f/e2665f2998902290f8203d3137a1ff4b.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
   },
     {
