--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,10 +1,10 @@
 [
   {
     "maintenance": false,
-    "versionCode": 9,
-    "versionName":"1.2.4 beta",
-    "download": "https://www.mediafire.com/file/f4qbzlaijzuet46/Demoder_1.2.4_beta.apk/file",
-    "detail": "1. Bản vá một số lỗi tính năng\n2. Thêm ngôn ngữ mới"
+    "versionCode": 10,
+    "versionName":"1.2.5 beta",
+    "download": "https://www.mediafire.com/file/79dykok2wp3d8px/Demoder_1.2.5_beta.apk/file",
+    "detail": "1. Bản vá một số lỗi tính năng"
   },
   {
     "home": false,
