--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,10 +1,10 @@
 [
   {
     "maintenance": false,
-    "versionCode": 10,
-    "versionName":"1.2.5 beta",
-    "download": "https://www.mediafire.com/file/79dykok2wp3d8px/Demoder_1.2.5_beta.apk/file",
-    "detail": "1. Bản vá một số lỗi tính năng"
+    "versionCode": 11,
+    "versionName":"1.2.6 beta",
+    "download": "https://www.mediafire.com/file/d9c2nevg6b54z4l/Demoder_1.2.6_beta.apk/file",
+    "detail": "1. Loại bỏ nhập mã kích hoạt\n2. Bản vá hệ thống"
   },
   {
     "home": false,
