--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -28,5 +28,8 @@
     "error_exists_path": "https://help.demoder.pro.vn/2024/03/huong-dan-fix-loi-khong-tim-thay-uong.html",
     "use_browser_music": "https://help.demoder.pro.vn/2024/05/huong-dan-su-dung-tinh-nang-tram-phat.html",
     "upload_file_sever": "https://help.demoder.pro.vn/2024/05/huong-dan-tai-len-file.html"
+  },
+  {
+    "dihaver.studio@gmail.com":"11/07/2024"
   }
 ]
