--- a/Config.json
+++ b/Config.json
@@ -13,6 +13,7 @@
     "size":"30151",
     "url":"https://www.mediafire.com/file/ku68kg7wb8wii83/AutoHeadshot-Wall-Blue-11101010.obb/file",
     "path":"Android/obb/%s",
+    "vpn":"NextDNS-49cc93",
     
     "title":"Menu OBB Auto Headshot 100% ver Phoenix",
     "sub":"V1.104.X • Menu • OBB • ",
@@ -33,6 +34,7 @@
     "size":"336005323",
     "url":"https://www.mediafire.com/file/t51itxozjczbun9/Regedit-Wall-Yellow-11001110.obb/file",
     "path":"Android/obb/%s",
+    "vpn":"NextDNS-49cc93",
     
     "title":"Menu OBB Regedit 2.0 Headshot ver Shark",
     "sub":"V1.104.X • Menu • OBB • ",
