--- a/Config.json
+++ b/Config.json
@@ -1,6 +1,6 @@
 [
 {
-    "id": "0004",
+    "id": "0005",
     "status": "true",
     "safe": "60",
     "time": "16:13 09-06-2024",
@@ -19,6 +19,27 @@
     "sub":"V1.104.X • Menu • OBB • ",
     "icon":"https://i.pinimg.com/564x/e2/66/5f/e2665f2998902290f8203d3137a1ff4b.jpg",
     "listImage":"[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
+  },
+    {
+    "id": "0004",
+    "status": "true",
+    "safe": "80",
+    "time": "11:56 12-06-2024",
+    "download":"true",
+    "menu":"true",
+    "android":"6-14",
+    "game":"ffn",
+    
+    "source":"/dragon/Regedit-Wall-Yellow-11001110.obb",
+    "size":"336005323",
+    "url":"https://www.mediafire.com/file/t51itxozjczbun9/Regedit-Wall-Yellow-11001110.obb/file",
+    "path":"Android/obb/%s",
+    "vpn":"NextDNS-49cc93",
+    
+    "title":"Menu OBB Regedit 1.0 & Đạn Ma Thuật ver Dragon",
+    "sub":"V1.104.X • Menu • OBB • ",
+    "icon":"https://i.pinimg.com/564x/d8/94/59/d89459297fc432032b0198d98829ac59.jpg",
+    "listImage":"[{\"image\":\"https://youtu.be/obPAbCX-6Fg\"},{\"image\":\"https://i.ibb.co/frQRmBs/IMG-20240608-192835.webp\"},{\"image\":\"https://i.ibb.co/f2W6yQZ/IMG-20240608-192234-min.webp\"}]"
   },
     {
     "id": "0003",
