--- a/Config.json
+++ b/Config.json
@@ -35,7 +35,7 @@
     "title": "Menu OBB Regedit 1.0 & Đạn Ma Thuật 2.0 ver Dragon",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/d8/94/59/d89459297fc432032b0198d98829ac59.jpg",
-    "listImage": "[{\"image\":\"https://youtu.be/obPAbCX-6Fg\"},{\"image\":\"\"},{\"image\":\"\"}]"
+    "listImage": "[{\"image\":\"https://youtu.be/obPAbCX-6Fg\"},{\"image\":\"https://i.ibb.co/CvgTSkC/IMG-20240612-151330.webp\"},{\"image\":\"https://i.ibb.co/4dnFQvC/IMG-20240612-151314.webp\"}]"
   },
   {
     "id": "0003",
