--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,13 +1,13 @@
 [
   {
     "maintenance": false,
-    "versionCode": 12,
-    "versionName":"1.2.7 beta",
-    "download": "https://www.mediafire.com/file/uhsx3sh9y1qsus6/Demoder_1.2.7_beta.apk/file",
-    "detail": "1. Thêm Config mới\n2. Thêm tính năng cảnh báo VPN Active\n3. Sửa lỗi bình luận null trên một số thiết bị\n4. Cải thiện tốc độ tải xuống dữ liệu Config"
+    "versionCode": 13,
+    "versionName":"1.2.8 beta",
+    "download": "https://www.mediafire.com/file/zdalfgnmoitf0dt/Demoder_1.2.8_beta.apk/file",
+    "detail": "1. Bản vá lỗi quyền ghi đường dẫn Android 11-14\n2. Tăng hiệu suất ứng dụng"
   },
   {
-    "home": true,
+    "home": false,
     "discover": false,
     "tools": false,
     "profile": false
