--- a/Config.json
+++ b/Config.json
@@ -11,9 +11,8 @@
     "source": "/phoenix/AutoHeadshot-Wall-Blue-11101010.obb",
     "size": "30151",
     "url": "https://www.mediafire.com/file/ku68kg7wb8wii83/AutoHeadshot-Wall-Blue-11101010.obb/file",
-    "path": "",
+    "path": "Android/obb/%s",
     "vpn": "NextDNS-49cc93",
-    "obb": "true",
     "title": "Menu OBB Auto Headshot 100% ver Phoenix",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/e2/66/5f/e2665f2998902290f8203d3137a1ff4b.jpg",
@@ -31,9 +30,8 @@
     "source": "/dragon/Regedit-Magic-Wall-White-11010011.obb",
     "size": "336005323",
     "url": "https://www.mediafire.com/file/iyfc3d75q1nkgb4/Regedit-Magic-Wall-White-11010011.obb/file",
-    "path": "",
+    "path": "Android/obb/%s",
     "vpn": "NextDNS-49cc93",
-    "obb": "true",
     "title": "Menu OBB Regedit 1.0 & Đạn Ma Thuật 2.0 ver Dragon",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/d8/94/59/d89459297fc432032b0198d98829ac59.jpg",
@@ -51,9 +49,8 @@
     "source": "/shark/Regedit-Wall-Yellow-11001110.obb",
     "size": "336005323",
     "url": "https://www.mediafire.com/file/t51itxozjczbun9/Regedit-Wall-Yellow-11001110.obb/file",
-    "path": "",
+    "path": "Android/obb/%s",
     "vpn": "NextDNS-49cc93",
-    "obb": "true",
     "title": "Menu OBB Regedit 2.0 Headshot ver Shark",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
