--- a/Config.json
+++ b/Config.json
@@ -9,8 +9,8 @@
     "android": "6-14",
     "game": "ffa",
     "source": "/phoenix/AutoHeadshot-Wall-Blue-11101010.obb",
-    "size": "30151",
-    "url": "https://www.mediafire.com/file/ku68kg7wb8wii83/AutoHeadshot-Wall-Blue-11101010.obb/file",
+    "size": "336002254",
+    "url": "https://www.mediafire.com/file/fssx8kcw91lo375/AutoHeadshot-Wall-Blue-11101010.obb/file",
     "path": "Android/obb/%s",
     "vpn": "NextDNS-49cc93",
     "title": "Menu OBB Auto Headshot 100% ver Phoenix",
