--- a/Config.json
+++ b/Config.json
@@ -7,7 +7,7 @@
     "download": "true",
     "menu": "true",
     "android": "6-14",
-    "game": "ffa",
+    "game": "ffn",
     "source": "/phoenix/AutoHeadshot-Wall-Blue-11101010.obb",
     "size": "336002254",
     "url": "https://www.mediafire.com/file/fssx8kcw91lo375/AutoHeadshot-Wall-Blue-11101010.obb/file",
