--- a/Config.json
+++ b/Config.json
@@ -20,7 +20,7 @@
   },
   {
     "id": "0004",
-    "status": "true",
+    "status": "false",
     "safe": "80",
     "time": "11:56 12-06-2024",
     "download": "true",
@@ -39,7 +39,7 @@
   },
   {
     "id": "0003",
-    "status": "true",
+    "status": "false",
     "safe": "80",
     "time": "15:24 25-05-2024",
     "download": "true",
