--- a/Config.json
+++ b/Config.json
@@ -8,14 +8,14 @@
     "menu": "true",
     "android": "6-14",
     "game": "ffn",
-    "source": "/phoenix/AutoHeadshot-Wall-Blue-11101010.obb",
-    "size": "336002254",
-    "url": "https://www.mediafire.com/file/fssx8kcw91lo375/AutoHeadshot-Wall-Blue-11101010.obb/file",
+    "source": "/phoenix/Magic-Wall-White-00111010.obb",
+    "size": "336005453",
+    "url": "https://www.mediafire.com/file/ulm0b1ubafeegb6/Magic-Wall-White-00111010.obb/file",
     "path": "Android/obb/%s",
     "vpn": "NextDNS-49cc93",
-    "title": "Menu OBB Auto Headshot 100% ver Phoenix",
+    "title": "Menu OBB Đạn Ma Thuật & Người Trắng ver Phoenix",
     "sub": "V1.104.X • Menu • OBB • ",
-    "icon": "https://i.pinimg.com/564x/e2/66/5f/e2665f2998902290f8203d3137a1ff4b.jpg",
+    "icon": "https://i.pinimg.com/564x/d0/06/b7/d006b787a1db13153a607cb08bb42bd0.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
   },
   {
