--- a/Config.json
+++ b/Config.json
@@ -12,7 +12,7 @@
     "size": "336005453",
     "url": "https://www.mediafire.com/file/ulm0b1ubafeegb6/Magic-Wall-White-00111010.obb/file",
     "path": "Android/obb/%s",
-    "vpn": "NextDNS-49cc93",
+    "vpn": "NextDNS-c62d32",
     "title": "Menu OBB Đạn Ma Thuật & Người Trắng ver Phoenix",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/d0/06/b7/d006b787a1db13153a607cb08bb42bd0.jpg",
@@ -31,7 +31,7 @@
     "size": "336005323",
     "url": "https://www.mediafire.com/file/iyfc3d75q1nkgb4/Regedit-Magic-Wall-White-11010011.obb/file",
     "path": "Android/obb/%s",
-    "vpn": "NextDNS-49cc93",
+    "vpn": "NextDNS-c62d32",
     "title": "Menu OBB Regedit 1.0 & Đạn Ma Thuật 2.0 ver Dragon",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/d8/94/59/d89459297fc432032b0198d98829ac59.jpg",
@@ -50,7 +50,7 @@
     "size": "336005323",
     "url": "https://www.mediafire.com/file/t51itxozjczbun9/Regedit-Wall-Yellow-11001110.obb/file",
     "path": "Android/obb/%s",
-    "vpn": "NextDNS-49cc93",
+    "vpn": "NextDNS-c62d32",
     "title": "Menu OBB Regedit 2.0 Headshot ver Shark",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/4b/6f/b5/4b6fb550bcdd6f014cd5a7a732cecf51.jpg",
