--- a/Config.json
+++ b/Config.json
@@ -3,7 +3,7 @@
     "id": "0005",
     "status": "true",
     "safe": "60",
-    "time": "16:13 09-06-2024",
+    "time": "15:47 18-06-2024",
     "download": "true",
     "menu": "true",
     "android": "6-14",
@@ -16,7 +16,7 @@
     "title": "Menu OBB Đạn Ma Thuật & Người Trắng ver Phoenix",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/d0/06/b7/d006b787a1db13153a607cb08bb42bd0.jpg",
-    "listImage": "[{\"image\":\"https://youtu.be/W4UeUJA9wLU\"},{\"image\":\"https://i.pinimg.com/originals/27/ea/99/27ea991de2064294dcc9a7c19396b306.png\"}]"
+    "listImage": "[{\"image\":\"https://youtu.be/syAIZqzGNFM\"},{\"image\":\"https://i.ibb.co/JBWkCMg/IMG-20240618-155813-11zon.webp\"}]"
   },
   {
     "id": "0004",
