--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,10 +1,10 @@
 [
   {
     "maintenance": false,
-    "versionCode": 16,
-    "versionName":"1.2.11 beta",
-    "download": "https://www.mediafire.com/file/zatqldowos8edp5/Demoder_1.2.11_beta.apk/file",
-    "detail": "1. Thêm Config mới\n2. Android 9 trở xuống không cần cấp quyền ghi đường dẫn\n3. Bản vá một số lỗi hệ thống"
+    "versionCode": 17,
+    "versionName":"1.2.12 beta",
+    "download": "https://www.mediafire.com/file/9ghn88gpswzjw4u/Demoder_1.2.12_beta.apk/file",
+    "detail": "1. Sửa lỗi bị văng trên một số dòng máy"
   },
   {
     "home": false,
