--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -4,7 +4,7 @@
     "versionCode": 17,
     "versionName": "1.2.12 beta",
     "fileName": "Demoder 1.2.12 beta.apk",
-    "fileSize": 5750325,
+    "fileSize": "5750325",
     "download": "https://www.mediafire.com/file/9ghn88gpswzjw4u/Demoder_1.2.12_beta.apk/file",
     "detail": "1. Sửa lỗi bị văng trên một số dòng máy"
   },
