--- a/Config.json
+++ b/Config.json
@@ -1,5 +1,24 @@
 [
   {
+    "id": "0006",
+    "status": "true",
+    "safe": "60",
+    "time": "15:25 22-06-2024",
+    "download": "true",
+    "menu": "true",
+    "android": "6-14",
+    "game": "ffn",
+    "source": "/wolf/Magic-Wall-White-00111010.obb",
+    "size": "336005453",
+    "url": "https://www.mediafire.com/file/ulm0b1ubafeegb6/Magic-Wall-White-00111010.obb/file",
+    "path": "Android/obb/%s",
+    "vpn": "NextDNS-c62d32",
+    "title": "Menu OBB Đạn Ma Thuật & Người Trắng ver Wolf",
+    "sub": "V1.104.X • Menu • OBB • ",
+    "icon": "https://i.pinimg.com/564x/f6/2e/8f/f62e8f9226521cca18632681dc88d257.jpg",
+    "listImage": "[{\"image\":\"https://youtu.be/syAIZqzGNFM\"},{\"image\":\"https://i.ibb.co/JBWkCMg/IMG-20240618-155813-11zon.webp\"}]"
+  },
+  {
     "id": "0005",
     "status": "true",
     "safe": "60",
