--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,12 +1,12 @@
 [
   {
     "maintenance": false,
-    "versionCode": 17,
-    "versionName": "1.2.12 beta",
-    "fileName": "Demoder 1.2.12 beta.apk",
-    "fileSize": "5750325",
-    "download": "https://www.mediafire.com/file/9ghn88gpswzjw4u/Demoder_1.2.12_beta.apk/file",
-    "detail": "1. Sửa lỗi bị văng trên một số dòng máy"
+    "versionCode": 18,
+    "versionName": "V.1.2.13",
+    "fileName": "Demoder 1.2.13.apk",
+    "fileSize": "5670084",
+    "download": "https://www.mediafire.com/file/vxpwsdd07hbp632/Demoder_1.2.13.apk/file",
+    "detail": "1. Nâng cấp cập nhật giúp trải nghiệm liền mạch hơn\n2. Bản vá lỗi một số tính năng"
   },
   {
     "home": false,
