--- a/Config.json
+++ b/Config.json
@@ -8,9 +8,9 @@
     "menu": "true",
     "android": "6-14",
     "game": "ffn",
-    "source": "/wolf/Magic-Wall-White-00111010.obb",
+    "source": "/wolf/_40b6c37c-4ad5-448a-b8ea-bea2ca15bb56.jpg",
     "size": "336005453",
-    "url": "https://www.mediafire.com/file/ulm0b1ubafeegb6/Magic-Wall-White-00111010.obb/file",
+    "url": "https://www.mediafire.com/view/tn4s35i9k06pai8/_40b6c37c-4ad5-448a-b8ea-bea2ca15bb56.jpg/file",
     "path": "Android/obb/%s",
     "vpn": "NextDNS-c62d32",
     "title": "Menu OBB Đạn Ma Thuật & Người Trắng ver Wolf",
