--- a/Config.json
+++ b/Config.json
@@ -9,7 +9,7 @@
     "android": "6-14",
     "game": "ffn",
     "source": "/wolf/_40b6c37c-4ad5-448a-b8ea-bea2ca15bb56.jpg",
-    "size": "336005453",
+    "size": "308459",
     "url": "https://www.mediafire.com/view/tn4s35i9k06pai8/_40b6c37c-4ad5-448a-b8ea-bea2ca15bb56.jpg/file",
     "path": "Android/obb/%s",
     "vpn": "NextDNS-c62d32",
