--- a/Config.json
+++ b/Config.json
@@ -20,7 +20,7 @@
   },
   {
     "id": "0005",
-    "status": "true",
+    "status": "false",
     "safe": "60",
     "time": "15:47 18-06-2024",
     "download": "true",
@@ -86,7 +86,7 @@
     "game": "ffn-ffa-ffm-fft",
     "path": "",
     "title": "Config Nút Điều Khiển Hệ Thống ver Tiger",
-    "sub": "V1.104.X • Button • Config • ",
+    "sub": "V1.105.X • Button • Config • ",
     "icon": "https://i.pinimg.com/236x/2e/e4/5e/2ee45e9fb26565954ca395f9e390a0e1.jpg",
     "listImage": "[{\"image\":\"https://i.ibb.co/YQTnw7x/IMG-20240527-114533-min.webp\"},{\"image\":\"https://i.ibb.co/6cKVWVY/IMG-20240527-114546-min.webp\"}]"
   },
@@ -101,7 +101,7 @@
     "game": "ffn-ffa-ffm",
     "path": "Android/data/%s/cache/UnityShaderCache",
     "title": "Menu Panel ver Monster",
-    "sub": "V1.104.10 • Menu • Panel • ",
+    "sub": "V1.105.X • Menu • Panel • ",
     "icon": "https://i.pinimg.com/564x/8b/2a/f5/8b2af5da97026709c8d5153660b16a29.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/3Hjw24Se4Po\"},{\"image\":\"https://drive.google.com/uc?id=1sNUl7KJgE6tZN-txZtVDm0ddvNpJzhfN\"},{\"image\":\"https://drive.google.com/uc?id=1Dmc4h92FVue7XA-cGg2G4TlJzXABqT80\"}]"
   }
