--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -27,6 +27,7 @@
     "private_policy": "https://help.demoder.pro.vn/p/privacy-policy.html",
     "pro_terms": "https://help.demoder.pro.vn/p/pro-terms.html",
     "android_13_permission": "https://help.demoder.pro.vn/2024/03/huong-dan-cap-quyen-tren-android-13.html",
+    "android_13_permission_shizuku": "https://help.demoder.pro.vn/2024/06/huong-dan-cap-quyen-shizuku-tren.html",
     "error_exists_path": "https://help.demoder.pro.vn/2024/03/huong-dan-fix-loi-khong-tim-thay-uong.html",
     "use_browser_music": "https://help.demoder.pro.vn/2024/05/huong-dan-su-dung-tinh-nang-tram-phat.html",
     "upload_file_sever": "https://help.demoder.pro.vn/2024/05/huong-dan-tai-len-file.html"
