--- a/Config.json
+++ b/Config.json
@@ -3,18 +3,16 @@
     "id": "0006",
     "status": "true",
     "safe": "60",
-    "time": "15:25 22-06-2024",
-    "download": "true",
+    "time": "12:00 28-06-2024",
     "menu": "true",
-    "android": "6-14",
-    "game": "ffn",
-    "source": "/wolf/_40b6c37c-4ad5-448a-b8ea-bea2ca15bb56.jpg",
-    "size": "308459",
-    "url": "https://www.mediafire.com/file/tn4s35i9k06pai8/_40b6c37c-4ad5-448a-b8ea-bea2ca15bb56.jpg/file",
+    "game": "ffa",
+    "source": "/wolf/MB-Wall-Y-10011101.obb",
+    "size": "10085",
+    "url": "https://www.mediafire.com/file/l5wqrbefp8zednd/MB-Wall-Y-10011101.obb/file",
     "path": "Android/obb/%s",
     "vpn": "NextDNS-c62d32",
-    "title": "Menu OBB Đạn Ma Thuật & Người Trắng ver Wolf",
-    "sub": "V1.104.X • Menu • OBB • ",
+    "title": "Menu OBB Đạn Ma Thuật & Người Vàng Free Fire Amazon ver Wolf",
+    "sub": "V1.105.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/f6/2e/8f/f62e8f9226521cca18632681dc88d257.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/syAIZqzGNFM\"},{\"image\":\"https://i.ibb.co/JBWkCMg/IMG-20240618-155813-11zon.webp\"}]"
   },
