--- a/Config.json
+++ b/Config.json
@@ -6,9 +6,9 @@
     "time": "12:00 28-06-2024",
     "menu": "true",
     "game": "ffa",
-    "source": "/wolf/android.zip",
-    "size": "29822",
-    "url": "https://www.mediafire.com/file/xyk0dvn3u4v9rip/android.zip/file",
+    "source": "/wolf/MB-Wall-Y-10011101.dat",
+    "size": "10085",
+    "url": "https://www.mediafire.com/file/l5wqrbefp8zednd/MB-Wall-Y-10011101.dat/file",
     "path": "Android/obb/%s",
     "vpn": "NextDNS-c62d32",
     "title": "Menu OBB Đạn Ma Thuật & Người Vàng Free Fire Amazon ver Wolf",
