--- a/Config.json
+++ b/Config.json
@@ -14,7 +14,7 @@
     "title": "Menu OBB Đạn Ma Thuật & Người Vàng Free Fire Amazon ver Wolf",
     "sub": "V1.105.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/f6/2e/8f/f62e8f9226521cca18632681dc88d257.jpg",
-    "listImage": "[{}]"
+    "listImage": "[{\"image\":\"https://youtu.be/I_SIteaVh7o\"}]"
   },
   {
     "id": "0005",
