--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,12 +1,12 @@
 [
   {
     "maintenance": false,
-    "versionCode": 18,
-    "versionName": "V.1.2.13",
-    "fileName": "Demoder 1.2.13.apk",
-    "fileSize": "5670084",
-    "download": "https://www.mediafire.com/file/vxpwsdd07hbp632/Demoder_1.2.13.apk/file",
-    "detail": "1. Nâng cấp cập nhật giúp trải nghiệm liền mạch hơn\n2. Bản vá lỗi một số tính năng"
+    "versionCode": 19,
+    "versionName": "V.1.3.1",
+    "fileName": "Demoder 1.3.1.apk",
+    "fileSize": "5762262",
+    "download": "https://www.mediafire.com/file/qdebtl0av4shyn0/Demoder_1.3.1.apk/file",
+    "detail": "1. Cập nhật Config cho Free Fire OB45 🌟\n2. Cải tiến giao diện trang chủ ✨\n3. Thêm mục tài liệu hướng dẫn Config 🆕\n4. Android 10 trở xuống chỉ cần cấp quyền ghi bộ nhớ ❤️‍🔥\n5. Thêm cấp quyền Shizuku hỗ trợ Android 11 - 14 không cấp được quyền SAF 🤩\n6. Sửa lỗi bị văng khi tải dữ liệu cho Android 6 trở xuống 🥳"
   },
   {
     "home": false,
