--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -30,7 +30,9 @@
     "android_13_permission_shizuku": "https://help.demoder.pro.vn/2024/06/huong-dan-cap-quyen-shizuku-tren.html",
     "error_exists_path": "https://help.demoder.pro.vn/2024/03/huong-dan-fix-loi-khong-tim-thay-uong.html",
     "use_browser_music": "https://help.demoder.pro.vn/2024/05/huong-dan-su-dung-tinh-nang-tram-phat.html",
-    "upload_file_sever": "https://help.demoder.pro.vn/2024/05/huong-dan-tai-len-file.html"
+    "upload_file_sever": "https://help.demoder.pro.vn/2024/05/huong-dan-tai-len-file.html",
+    "id_vpn_normal":"c62d32",
+    "id_vpn_pro":"xxxxxx"
   },
   {
     "dihaver.studio@gmail.com":"10/06/2024"
