--- a/Config.json
+++ b/Config.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "0006",
-    "status": "true",
+    "status": "false",
     "safe": "60",
     "time": "12:00 28-06-2024",
     "menu": "true",
