--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -31,6 +31,7 @@
     "error_exists_path": "https://help.demoder.pro.vn/2024/03/huong-dan-fix-loi-khong-tim-thay-uong.html",
     "use_browser_music": "https://help.demoder.pro.vn/2024/05/huong-dan-su-dung-tinh-nang-tram-phat.html",
     "upload_file_sever": "https://help.demoder.pro.vn/2024/05/huong-dan-tai-len-file.html",
+    "use_demoder_vpn": "https://help.demoder.pro.vn/2024/05/huong-dan-tai-len-file.html",
     "id_vpn_normal":"219848",
     "id_vpn_pro":"5e1517"
   },
