--- a/Config.json
+++ b/Config.json
@@ -25,11 +25,11 @@
     "menu": "true",
     "android": "6-14",
     "game": "ffn",
-    "source": "/phoenix/Magic-Wall-White-00111010.obb",
-    "size": "336005453",
-    "url": "https://www.mediafire.com/file/ulm0b1ubafeegb6/Magic-Wall-White-00111010.obb/file",
+    "source": "/test/test.zip",
+    "size": "287178",
+    "url": "https://www.mediafire.com/file/ridhac4ock8xs5b/test.zip/file",
     "path": "Android/data/%s",
-    "vpn": "NextDNS-c62d32",
+    "vpn": "Demoder VPN",
     "title": "Menu OBB Đạn Ma Thuật & Người Trắng ver Phoenix",
     "sub": "V1.104.X • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/d0/06/b7/d006b787a1db13153a607cb08bb42bd0.jpg",
