--- a/Config.json
+++ b/Config.json
@@ -24,11 +24,11 @@
     "download": "true",
     "menu": "true",
     "android": "6-14",
-    "game": "ffn",
+    "game": "ffn-ffm",
     "source": "/test/test.zip",
     "size": "287178",
     "url": "https://www.mediafire.com/file/ridhac4ock8xs5b/test.zip/file",
-    "path": "Android/data/%s",
+    "path": "Android/data/%s-Android/obb/%s",
     "vpn": "Demoder VPN",
     "title": "Menu OBB Đạn Ma Thuật & Người Trắng ver Phoenix",
     "sub": "V1.104.X • Menu • OBB • ",
