--- a/Config.json
+++ b/Config.json
@@ -37,20 +37,18 @@
   },
   {
     "id": "0004",
-    "status": "false",
+    "status": "true",
     "safe": "80",
-    "time": "11:56 12-06-2024",
-    "download": "true",
+    "time": "22:00 14-07-2024",
     "menu": "true",
-    "android": "6-14",
-    "game": "ffn",
-    "source": "/dragon/Regedit-Magic-Wall-White-11010011.obb",
-    "size": "336005323",
-    "url": "https://www.mediafire.com/file/iyfc3d75q1nkgb4/Regedit-Magic-Wall-White-11010011.obb/file",
-    "path": "Android/obb/%s",
+    "game": "ffn-ffm",
+    "source": "/dragon/d1236d17885d06d41a340e9bf8edf0ad.zip",
+    "size": "183964107",
+    "url": "https://www.mediafire.com/file/68yzpplz4o52qjw/d1236d17885d06d41a340e9bf8edf0ad.zip/file",
+    "path": "Android/data/%s",
     "vpn": "NextDNS-c62d32",
-    "title": "Menu OBB Regedit 1.0 & Đạn Ma Thuật 2.0 ver Dragon",
-    "sub": "V1.104.X • Menu • OBB • ",
+    "title": "Menu Data Nhân Vật Nhìn Xuyên Tường Antiban ver Dragon",
+    "sub": "V1.105.7 • Menu • OBB • ",
     "icon": "https://i.pinimg.com/564x/d8/94/59/d89459297fc432032b0198d98829ac59.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/obPAbCX-6Fg\"},{\"image\":\"https://i.ibb.co/CvgTSkC/IMG-20240612-151330.webp\"},{\"image\":\"https://i.ibb.co/4dnFQvC/IMG-20240612-151314.webp\"}]"
   },
