--- a/Config.json
+++ b/Config.json
@@ -48,7 +48,7 @@
     "path": "Android/data/%s",
     "vpn": "NextDNS-c62d32",
     "title": "Menu Data Nhân Vật Nhìn Xuyên Tường Antiban ver Dragon",
-    "sub": "V1.105.7 • Menu • OBB • ",
+    "sub": "V1.105.7 • Menu • Data • ",
     "icon": "https://i.pinimg.com/564x/d8/94/59/d89459297fc432032b0198d98829ac59.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/obPAbCX-6Fg\"},{\"image\":\"https://i.ibb.co/CvgTSkC/IMG-20240612-151330.webp\"},{\"image\":\"https://i.ibb.co/4dnFQvC/IMG-20240612-151314.webp\"}]"
   },
